--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
   <div id="chapterSelection">
     <p>Select a chapter:</p>
-    <button class="chapter-btn" onclick="startChapter('Morphology')">Morphology</button>
+    <button class="chapter-btn" onclick="startChapter('Hydrocarbons')">Hydrocarbons</button>
     <button class="chapter-btn" onclick="startChapter('Skeletal System')">Skeletal System</button>
     <button class="chapter-btn" onclick="startChapter('Hormones')">Hormones</button>
   </div>
@@ -53,8 +53,75 @@
 
   <script>
     var decks = {
-      "Morphology": [
-        // You can add morphology flashcards here later
+      "Hydrocarbons": [
+        // — GENERAL METHODS OF PREPARATION OF ALKANES —
+
+{ question: "Alkanes can be prepared by hydrogenation of", answer: "Alkenes and alkynes in presence of Ni, Pt, or Pd catalyst" },
+{ question: "Catalyst used in hydrogenation of alkenes and alkynes", answer: "Ni, Pt, or Pd" },
+{ question: "What is the product when ethene is hydrogenated?", answer: "Ethane" },
+{ question: "What is the product when ethyne is hydrogenated completely?", answer: "Ethane" },
+
+{ question: "Alkanes from alkyl halides are prepared by", answer: "Reduction using nascent hydrogen (Zn/HCl or LiAlH₄)" },
+{ question: "Reagent used to reduce alkyl halides to alkanes", answer: "Zn + HCl or LiAlH₄" },
+
+{ question: "What is Wurtz reaction?", answer: "Reaction of alkyl halides with sodium in dry ether to form higher alkanes" },
+{ question: "Reactants in Wurtz reaction", answer: "2 Alkyl halides + 2 Na in dry ether" },
+{ question: "Limitation of Wurtz reaction", answer: "Only useful for symmetrical alkanes" },
+
+{ question: "What is Frankland reaction?", answer: "Alkyl halides react with zinc to form higher alkanes (R–Zn–R → R–R)" },
+{ question: "Reactant used in Frankland reaction", answer: "Alkyl halide and metallic zinc" },
+
+{ question: "Decarboxylation of sodium salt of carboxylic acid gives", answer: "Alkane with one carbon less" },
+{ question: "Reagent used in decarboxylation of sodium salt of acid", answer: "Soda lime (NaOH + CaO)" },
+{ question: "Example of decarboxylation reaction", answer: "CH₃COONa + NaOH → CH₄ + Na₂CO₃" },
+
+{ question: "Kolbe’s electrolysis involves electrolysis of", answer: "Aqueous solution of sodium or potassium salt of carboxylic acid" },
+{ question: "Product formed at anode in Kolbe’s electrolysis", answer: "Alkane (R–R)" },
+{ question: "Example of Kolbe’s electrolysis", answer: "2CH₃COONa → C₂H₆ + 2CO₂ + H₂ + 2NaOH" },
+
+{ question: "Clemenson’s reduction converts carbonyl group to", answer: "–CH₂– group" },
+{ question: "Reagent used in Clemenson’s reduction", answer: "Zn–Hg and concentrated HCl" },
+{ question: "Example of Clemenson’s reduction", answer: "CH₃COCH₃ → CH₃CH₂CH₃" },
+
+{ question: "What is Wolff–Kishner reduction?", answer: "Reduction of carbonyl compounds to alkanes using hydrazine and KOH" },
+{ question: "Reagents used in Wolff–Kishner reduction", answer: "NH₂NH₂ and KOH (in ethylene glycol)" },
+{ question: "Example of Wolff–Kishner reduction", answer: "CH₃COCH₃ → CH₃CH₂CH₃" },
+
+{ question: "Reaction of alkyl halide with Grignard reagent gives", answer: "Alkane (R–H)" },
+{ question: "Grignard reagent has the formula", answer: "R–Mg–X" },
+{ question: "Grignard reagent reacts with water to form", answer: "Alkane + Mg(OH)X" },
+
+{ question: "What is Corey–House synthesis?", answer: "Alkyl halide reacts with lithium dialkyl cuprate to form higher alkanes" },
+{ question: "Reagent used in Corey–House synthesis", answer: "R₂CuLi (lithium dialkyl cuprate)" },
+{ question: "General reaction of Corey–House synthesis", answer: "R–X + R'₂CuLi → R–R' + RCu + LiX" },
+
+{ question: "Hydrolysis of metal carbide gives", answer: "Alkane" },
+{ question: "Example of alkane from metal carbide", answer: "Al₄C₃ + 12H₂O → 3CH₄ + 4Al(OH)₃" },
+
+// — CHEMICAL PROPERTIES OF ALKANES —
+
+{ question: "Characteristic reaction of alkanes", answer: "Substitution reaction" },
+
+{ question: "Halogenation of alkanes occurs in presence of", answer: "Sunlight or UV light" },
+{ question: "Type of mechanism in halogenation of alkanes", answer: "Free radical chain mechanism" },
+{ question: "Product of chlorination of methane", answer: "Mixture of CH₃Cl, CH₂Cl₂, CHCl₃, CCl₄" },
+
+{ question: "Nitration of alkanes takes place with", answer: "Vapour phase reaction of alkane with nitric acid" },
+{ question: "Product of nitration of methane", answer: "Nitromethane (CH₃NO₂)" },
+{ question: "Condition for nitration of alkanes", answer: "At 673 K (400°C)" },
+
+{ question: "Sulphonation of alkanes is done by", answer: "Fuming sulphuric acid (H₂SO₄)" },
+{ question: "Product of sulphonation of alkanes", answer: "Alkyl sulfonic acid (R–SO₃H)" },
+{ question: "Condition for sulphonation of alkanes", answer: "At 400 K" },
+
+{ question: "Oxidation of alkanes in presence of excess oxygen gives", answer: "CO₂ + H₂O" },
+{ question: "Partial oxidation of alkanes gives", answer: "Alcohols, aldehydes, or acids depending on conditions" },
+{ question: "Catalyst used for catalytic oxidation of alkanes", answer: "Mo or Cu" },
+
+{ question: "What is isomerization?", answer: "Conversion of straight-chain alkanes into branched-chain alkanes" },
+{ question: "Catalyst used in isomerization", answer: "AlCl₃ + HCl or Pt catalyst at high temperature" },
+{ question: "Example of isomerization reaction", answer: "n-Butane → isobutane" }
+// You can add morphology flashcards here later
       ],
       "Skeletal System": [
         { question: "Chondroitin salts are present in", answer: "Cartilage" },
@@ -403,6 +470,7 @@
 
 </body>
 </html>
+
 
 
 
